<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:paddingTop="24dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/popup_edit_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/popup_edit_text"
        android:layout_marginStart="26dp"
        android:text="@string/myapp_edit_status_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popup_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/myapp_cancel_text"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onBackPressed"
        app:layout_constraintEnd_toStartOf="@id/popup_button_save"
        app:layout_constraintTop_toBottomOf="@id/popup_edit_text_layout" />

    <Button
        android:id="@+id/popup_button_save"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/myapp_save_text"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="updateStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_edit_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popup_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        app:helperText="@string/myapp_edit_status_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_edit_name_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popup_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen"
            android:inputType="textNoSuggestions|textFilter"
            android:maxLength="60"
            android:singleLine="true"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>