<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriendActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/addfriendactivity_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.NoActionBar.AppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/action_bar_button_selectable"
                android:contentDescription="@string/myapp_icon_button_content_desc"
                android:onClick="onBackPressed"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/myapp_add_friend_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/search_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myapp_add_friend_no_results"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searched_users" />

    <SearchView
        android:id="@+id/user_search"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/searchbox_background"
        android:iconifiedByDefault="false"
        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
        android:queryHint="Type Name to Search..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addfriendactivity_app_bar" />

    <ListView
        android:id="@+id/searched_users"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_search" />

    <ProgressBar
        android:id="@+id/progressBar_searching_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.MainProgressBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searched_users" />

</androidx.constraintlayout.widget.ConstraintLayout>